EKS-Deployments/visitor-app-deploy-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visitor-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visitor-app
  template:
    metadata:
      labels:
        app: visitor-app
    spec:
      containers:
      - name: visitor-app
        image: 00000000000.dkr.ecr.us-east-2.amazonaws.com/visitorcountapp:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: visitor-app
spec:
  selector:
    app: visitor-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
