EKS-Deployments/visitor-app-ingress-v2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visitor-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb  
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visitor-app
                port:
                  number: 80
